--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -1,6 +1,83 @@
 @import "variables";
 
 footer {
-  margin-top: 60px;
-  text-align: center;
+  padding: 60px 0;
+  border-top: 1px solid #eee;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  .footer-menu {
+    margin-bottom: 28px;
+
+    .nav-pills .nav-link.active {
+      color: $dark-orange-color;
+      background-color: transparent;
+    }
+
+    .nav-link {
+      margin: 0 16px;
+      color: $dark-grey-color;
+      font-size: 13px;
+      font-family: $font-latoregular;
+      text-transform: uppercase;
+
+      &:hover {
+        color: $light-orange-color;
+      }
+    }
+  }
+
+  .phone-number {
+    font-size: 23px;
+    font-family: $font-latoregular;
+    color: $dark-grey-color;
+    background: url("../images/phone.png") 0 50% no-repeat;
+    padding-left: 18px;
+    margin-bottom: 26px;
+  }
+
+  .social {
+    .tw {
+      background: url("../images/tw.png") no-repeat;
+      height: 15px;
+      width: 16px;
+    }
+
+    .fb {
+      background: url("../images/fb.png") no-repeat;
+      height: 18px;
+      width: 10px;
+    }
+
+    .go {
+      background: url("../images/g+.png") no-repeat;
+      height: 18px;
+      width: 17px;
+    }
+
+    .in {
+      background: url("../images/in.png") no-repeat;
+      height: 16px;
+      width: 16px;
+    }
+  }
+
+  .footer-info {
+    background-color: $blue-color;
+    padding: 20px 0;
+    width: 100%;
+    text-align: center;
+
+    p {
+      font-size: 13px;
+      font-family: $font-main;
+      margin-bottom: 0;
+      color: #fff;
+
+      a {
+        color: #fff;
+      }
+    }
+  }
 }
