--- a/styles/_section2.scss
+++ b/styles/_section2.scss
@@ -16,7 +16,7 @@
 
     li {
       padding-left: 80px;
-      width: 40%;
+      width: 510px;
       text-align: left;
       margin-bottom: 70px;
 
