--- a/styles/_section3.scss
+++ b/styles/_section3.scss
@@ -32,3 +32,21 @@
     padding: 0 30px;
   }
 }
+
+@media (max-width: 738px) {
+  .about-us {
+    flex-direction: column;
+
+    .bg-area {
+      height: 300px;
+    }
+
+    .text-area {
+      padding: 60px 20px;
+    }
+
+    div {
+      width: 100%;
+    }
+  }
+}
