--- a/styles/_section5.scss
+++ b/styles/_section5.scss
@@ -13,10 +13,10 @@
   .steps-list {
     margin-top: 110px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 
     li {
-      width: 20%;
+      width: 220px;
       padding-top: 160px;
 
       &:nth-child(1) {
@@ -89,5 +89,39 @@
     padding-left: 24px;
     padding-right: 24px;
     margin-top: 90px;
+  }
+}
+
+@media (max-width: 738px) {
+  .how-it-works {
+    padding-bottom: 60px;
+
+    .steps-list {
+      flex-direction: column;
+      align-items: center;
+
+      li {
+        padding-top: 80px;
+        margin-bottom: 30px;
+
+        &:nth-child(1) {
+          &:after {
+            display: none;
+          }
+        }
+
+        &:nth-child(2) {
+          &:after {
+            display: none;
+          }
+        }
+
+        &:nth-child(3) {
+          &:after {
+            display: none;
+          }
+        }
+      }
+    }
   }
 }
