--- a/styles/_section6.scss
+++ b/styles/_section6.scss
@@ -16,7 +16,7 @@
     margin-top: 56px;
 
     li {
-      width: 47%;
+      width: 560px;
       height: 240px;
       background: #fff;
       margin: 10px 15px;
@@ -69,5 +69,45 @@
       }
     }
   }
+}
 
+@media (max-width: 738px) {
+  .clients {
+    padding-bottom: 60px;
+
+    .clients-list {
+      margin-top: 40px;
+
+      li {
+        width: 560px;
+        height: 260px;
+        margin: 10px;
+        justify-content: space-between;
+        padding: 10px;
+
+        div {
+          width: 57%;
+
+          cite {
+            font-size: 11px;
+            line-height: 0;
+
+            &:before {
+              content: '';
+              background: url("../images/cite1.png");
+              height: 9px;
+              width: 11px;
+              position: absolute;
+              left: -18px;
+            }
+          }
+
+          p {
+            font-size: 12px;
+            margin-top: 12px;
+          }
+        }
+      }
+    }
+  }
 }
