--- a/styles/_section6.scss
+++ b/styles/_section6.scss
@@ -19,7 +19,7 @@
       width: 560px;
       height: 240px;
       background: #fff;
-      margin: 10px 15px;
+      margin: 10px 0;
       display: flex;
       justify-content: space-between;
       align-items: flex-start;
@@ -79,7 +79,7 @@
       margin-top: 40px;
 
       li {
-        width: 560px;
+        width: 520px;
         height: 260px;
         margin: 10px;
         justify-content: space-between;
