--- a/styles/style.css
+++ b/styles/style.css
@@ -284,6 +284,13 @@
     padding-right: 24px;
     margin-top: 90px; }
 
+@media (max-width: 1000px) {
+  .how-it-works .steps-list li:nth-child(1):after {
+    display: none; }
+  .how-it-works .steps-list li:nth-child(2):after {
+    display: none; }
+  .how-it-works .steps-list li:nth-child(3):after {
+    display: none; } }
 @media (max-width: 738px) {
   .how-it-works {
     padding-bottom: 60px; }
@@ -292,13 +299,7 @@
       align-items: center; }
       .how-it-works .steps-list li {
         padding-top: 80px;
-        margin-bottom: 30px; }
-        .how-it-works .steps-list li:nth-child(1):after {
-          display: none; }
-        .how-it-works .steps-list li:nth-child(2):after {
-          display: none; }
-        .how-it-works .steps-list li:nth-child(3):after {
-          display: none; } }
+        margin-bottom: 30px; } }
 .clients {
   text-align: center;
   background-color: #ffc155;
@@ -314,7 +315,7 @@
       width: 560px;
       height: 240px;
       background: #fff;
-      margin: 10px 15px;
+      margin: 10px 0;
       display: flex;
       justify-content: space-between;
       align-items: flex-start;
@@ -357,7 +358,7 @@
     .clients .clients-list {
       margin-top: 40px; }
       .clients .clients-list li {
-        width: 560px;
+        width: 520px;
         height: 260px;
         margin: 10px;
         justify-content: space-between;
