--- a/styles/_section6.scss
+++ b/styles/_section6.scss
@@ -16,10 +16,10 @@
     margin-top: 56px;
 
     li {
-      width: 560px;
+      width: 520px;
       height: 240px;
       background: #fff;
-      margin: 10px 0;
+      margin: 10px 15px;
       display: flex;
       justify-content: space-between;
       align-items: flex-start;
