--- a/styles/_section2.scss
+++ b/styles/_section2.scss
@@ -12,7 +12,7 @@
     margin-bottom: 70px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-between;;
 
     li {
       padding-left: 80px;
