--- a/styles/_section5.scss
+++ b/styles/_section5.scss
@@ -13,7 +13,7 @@
   .steps-list {
     margin-top: 110px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 
     li {
       width: 220px;
