--- a/styles/_section6.scss
+++ b/styles/_section6.scss
@@ -12,7 +12,7 @@
   .clients-list {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;;
+    justify-content: space-around;
     margin-top: 56px;
 
     li {
