--- a/styles/style.css
+++ b/styles/style.css
@@ -91,7 +91,7 @@
     margin-bottom: 70px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between; }
+    justify-content: space-around; }
     .services .services-list li {
       padding-left: 80px;
       width: 510px;
@@ -284,7 +284,7 @@
     padding-right: 24px;
     margin-top: 90px; }
 
-@media (max-width: 1000px) {
+@media (max-width: 1024px) {
   .how-it-works .steps-list li:nth-child(1):after {
     display: none; }
   .how-it-works .steps-list li:nth-child(2):after {
@@ -309,7 +309,7 @@
   .clients .clients-list {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
     margin-top: 56px; }
     .clients .clients-list li {
       width: 530px;
